# vpx-gui-tools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  compile.sh  create_icons.sh  imgui.ini  resources.cmake  version.h.in  vpx_config.cpp  vpx_ini_editor.py  vpx_launcher.sh
.github/workflows/: compile_test.yml
resources/: settings.ini
src/: application.cpp  application.h  config_manager.cpp  ini_editor.cpp  ini_editor.h  launcher.cpp  launcher.h  main.cpp  table_manager.cpp  table_manager.h  vpx_config.cpp
src/config/: config_manager.cpp  config_manager.h  iconfig_provider.h  media_config.cpp  media_config.h  path_config.cpp  paths_config.h  tools_config.cpp  tools_config.h  window_config.cpp  window_config.h
src/core/: application.cpp  application.h
src/launcher/: launcher.cpp  launcher.h  table_actions.cpp  table_actions.h  table_view.cpp  table_view.h
src/tables/: table_filter.cpp  table_filter.h  table_loader.cpp  table_loader.h  table_manager.cpp  table_manager.h  table_updater.cpp  table_updater.h
src/tools/: first_run.cpp  first_run.h  ini_editor.cpp  ini_editor.h
src/utils/: button_tooltips.h  config_tooltips.h  logging.h  structures.h  vpx_tooltips.h
